<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="content"
            type="com.example.more.data.local.entity.ContentEntity" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginTop="?attr/actionBarSize"
        android:clipToPadding="false"
        android:paddingBottom="?attr/actionBarSize">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@{content.content_text}"
                android:textColor="#fff"
                android:textSize="18sp"
                android:transitionName="@string/title_transaction"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_head"
                android:transitionName="@string/image_transaction"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="18dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"
                app:profileImage="@{content.media_link}" />

            <TextView
                android:transitionName="@string/description_transaction"
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="casual"
                android:gravity="center"
                android:text="@{content.description}"
                android:textColor="#fff"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image_head" />

            <TextView
                android:id="@+id/dated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:fontFamily="casual"
                android:maxLines="1"
                android:text="@{content.tag}"
                android:textColor="#fff"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/content" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>