<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="SettingFragmentBinding">

        <variable
            name="preferenceStorage"
            type="com.example.more.data.local.pref.SharedPrefStorage" />

        <variable
            name="settingsHandler"
            type="com.example.more.ui.interfaces.SettingsFragmentHandler" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/notificationTitle"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="@string/notification"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />





            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/factLay"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notificationTitle">

                <ImageView
                    android:id="@+id/fact_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_public_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="casual"
                    android:gravity="left"
                    android:text="@string/fact_notification"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/fact_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/factNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{ (Boolean)preferenceStorage.readValue(@string/fact_notification,true)}"
                    android:onCheckedChanged="@{(switch, checked) -> preferenceStorage.writeValue(@string/fact_notification,checked)}"
                    android:theme="@style/mySwitchStyle"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/quoteLay"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/factLay">

                <ImageView
                    android:id="@+id/quote_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_format_quote_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="casual"
                    android:gravity="left"
                    android:text="@string/quote_notification"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/quote_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/quoteNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{ (Boolean)preferenceStorage.readValue(@string/quote_notification,true)}"
                    android:onCheckedChanged="@{(switch, checked) -> preferenceStorage.writeValue(@string/quote_notification,checked)}"
                    android:theme="@style/mySwitchStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/storyLay"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/quoteLay">

                <ImageView
                    android:id="@+id/story_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_local_library_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="casual"
                    android:gravity="left"
                    android:text="@string/meme_notification"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/story_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/storyNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{ (Boolean)preferenceStorage.readValue(@string/meme_notification,true)}"
                    android:onCheckedChanged="@{(switch, checked) -> preferenceStorage.writeValue(@string/meme_notification,checked)}"
                    android:theme="@style/mySwitchStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/movieLay"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/storyLay">

                <ImageView
                    android:id="@+id/movie_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_local_movies_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="casual"
                    android:gravity="left"
                    android:text="@string/movie_notification"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/movie_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/movieNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{(Boolean)preferenceStorage.readValue(@string/movie_notification,true)}"
                    android:onCheckedChanged="@{(switch, checked) -> preferenceStorage.writeValue(@string/movie_notification,checked)}"
                    android:theme="@style/mySwitchStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/dayLay"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/movieLay">

                <ImageView
                    android:id="@+id/day_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_event_note_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="casual"
                    android:gravity="left"
                    android:text="@string/otd"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/day_icon"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/dayNotification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="@{(Boolean)preferenceStorage.readValue(@string/otd_pref,true)}"
                    android:onCheckedChanged="@{(switch, checked) -> preferenceStorage.writeValue(@string/otd_pref,checked)}"
                    android:theme="@style/mySwitchStyle"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/other"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="casual"
                android:gravity="center_vertical"
                android:text="@string/other"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="17sp"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@+id/dayLay" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/helpLay"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="4dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{settingsHandler::onHelpClickView}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/other">

                <ImageView
                    android:id="@+id/help_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_headphones" />

                <TextView
                    android:id="@+id/help"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="casual"
                    android:gravity="center_vertical"
                    android:text="@string/help"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/help_icon"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/creditLay"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{settingsHandler::onCreditClickView}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/helpLay">

                <ImageView
                    android:id="@+id/credit_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_customer" />

                <TextView
                    android:id="@+id/credits"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="casual"
                    android:gravity="center_vertical"
                    android:text="@string/credits"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/credit_icon"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>\

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/shareLay"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="?attr/selectableItemBackground"
                android:onClick="@{settingsHandler::shareApp}"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creditLay">

                <ImageView
                    android:id="@+id/share_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_share_black_24dp" />

                <TextView
                    android:id="@+id/shares"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_marginLeft="16dp"
                    android:fontFamily="casual"
                    android:gravity="center_vertical"
                    android:text="@string/share"
                    android:textColor="#fff"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@+id/share_icon"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>